tiny fix for deprecated invocation